Updated in frontent with new AdminEditProduct.jsx and update adminCatalog.js.